--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
       "public"
     ]
   },
+  "now": {
+    "alias": "servicetorget.next.t-fk.no",
+  },
   "devDependencies": {
     "coveralls": "2.13.0",
     "nsp": "2.6.3",
