--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "main": "index.js",
   "engines": {
-    "node": ">=4.5.0"
+    "node": ">=10.14.2"
   },
   "scripts": {
     "test": "standard && nsp check && tap --reporter=spec test/**/*.js",
@@ -27,10 +27,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "http://github.com/telemark/politikk.microsite.t-fk.no.git"
+    "url": "git+https://github.com/telemark/politikk.microsite.t-fk.no.git"
   },
   "bugs": {
-    "url": "http://github.com/telemark/politikk.microsite.t-fk.no/issues"
+    "url": "https://github.com/telemark/politikk.microsite.t-fk.no/issues"
   },
   "louie": {
     "versionName": "Australian Crawl",
