--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "test": "standard && npm audit && tap --reporter=spec test/**/*.js",
     "coverage": "tap test/**/*.js --coverage",
     "coveralls": "tap --cov --coverage-report=lcov test/**/*.js && cat coverage/lcov.info | coveralls",
-    "setup": "npm install && node setup.js",
     "standard-fix": "standard --fix",
-    "start": "node standalone.js"
+    "start": "node standalone.js",
+    "refresh": "rm -rf node_modules && rm package-lock.json && npm install"
   },
   "keywords": [
     "opengov",
